--- a/backend/UescColcicAPI/appsettings.json
+++ b/backend/UescColcicAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UescColcicDb": "Server=your-server;Database=your-database;User=your-user;Password=your-password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
